update latest results page

--- a/LatestResults.html
+++ b/LatestResults.html
@@ -35,19 +35,46 @@
     <h1> Latest Results </h1>
     <!--     x     -->
     <ol reversed>
-	<li> <b>Recent work on the interplay between neutrinos and dark matter in the early Universe</b>: <a href="https://arxiv.org/abs/2005.01717" target="_blank"> Freezing-in Dark Matter from Secret Neutrino Interactions </a></li>
-	<ul>
-		<li><b>Key points:</b></li><br>
-			<ul><li>We invent a model with dark sector that only contains a fermionic dark matter and a light scalar mediator. The dark scalar talks with the SM <font color="red"> <i>only</i> </font> through the light scalar mediator through its interactions with SM neutrinos.</li>
-			<li>We find that our model is <font color="red"> <i>in tension</i> </font> with experimental constraints while trying to solve the small-scale structure problems and dark matter indirect detection at Super-K <font color="red"> <i>simultaneously</i></font>.</li> </ul>
+	
+		<li> <b>Recent work on neutrino NSIs in SMEFT from terrestrial neutrino experiments</b>: <a href="https://arxiv.org/abs/2011.14292" target="_blank"> Non-standard interactions in SMEFT confronted with terrestrial neutrino experiments </a></li>
 
-		<li><b>Key plots:</b></li><br>
-			<embed src="figs/LatestResultFig/SSS.pdf" width="340px" height="400px">
-			<embed src="figs/LatestResultFig/DMID.pdf" width="340px" height="400px"> <!-- embed works the best -->
-			<ul><li>Left plot: Benchmark points that can solve the small-scale structure problems.</li></ul>
-			<ul><li>Right plot: Parameter space that survives from dark matter indirect detection.</li></ul>
-      </ul>
+		<ul>
+			<li><b>Key points:</b></li><br>
+				<ul>
+					<li>Long-baseline neutrino experiments are sensitive to UV physics at the <font color="red"> <i>~20 TeV</I> </font> scale (1st plot below).</li>
+					<li>Reactor neutrino experiments Daya Bay, Double Chooz and RENO are sensitive to UV physics at the <font color="red"> <i>~4 TeV</I> </font> scale (2nd plot below).</li>
+					<li>Long-baseline and reactor neutrino experiments are sensitive to different sets of dimensin-6 SMEFT operators<font color="red"> <i>--Complementarity to each other</I> </font>.</li>
+					<li><font color="red">Correlation</font> among different SMEFT operators at the UV scale can change the resulting constraints <font color="red">by several orders of magnitude</font>.</li>
+				</ul>
+			<br>
+			<li><b>Key plots:</b></li><br>
+				<embed src="figs/LatestResultFig/LBL-Experiments.pdf" width="700px" height="300px">
+				<embed src="figs/LatestResultFig/Reactor-Experiments.pdf" width="700px" height="300px"> <!-- embed works the best -->
+    	</ul>
+
+
+		<br>
+		<br>
+		<hr class="new5">
+		<br>
+		
+
+		<li> <b>Recent work on the interplay between neutrinos and dark matter in the early Universe</b>: <a href="https://arxiv.org/abs/2005.01717" target="_blank"> Freezing-in Dark Matter from Secret Neutrino Interactions </a></li>
+		<ul>
+			<li><b>Key points:</b></li><br>
+				<ul>
+					<li>We invent a model with dark sector that only contains a fermionic dark matter and a light scalar mediator. The dark scalar talks with the SM <font color="red"> <i>only</i> </font> through the light scalar mediator through its interactions with SM neutrinos.</li>
+					<li>We find that our model is <font color="red"> <i>in tension</i> </font> with experimental constraints while trying to solve the small-scale structure problems and dark matter indirect detection at Super-K <font color="red"> <i>simultaneously</i></font>.</li> 
+				</ul>
+			<br>
+			<li><b>Key plots:</b></li><br>
+				<embed src="figs/LatestResultFig/Small-Scale-Problem.pdf" width="340px" height="400px">
+				<embed src="figs/LatestResultFig/Indirect-detection-constraints.pdf" width="340px" height="400px"> <!-- embed works the best -->
+				<ul><li>Left plot: Benchmark points that can solve the small-scale structure problems.</li></ul>
+				<ul><li>Right plot: Parameter space that survives from dark matter indirect detection.</li></ul>
+		</ul>
     </ol>
+
   </div>
     
   <!-- back to top button -->
