--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -72,7 +72,9 @@
 
 
 	<h3> Neutrino packages </h3>
-	<a href="http://www.nu-fit.org/" target="_blank">NuFIT</a>  |  <a href="https://www.mpi-hd.mpg.de/personalhomes/globes/" target="_blank">GLoBES</a>  |  <a href="https://github.com/ThomasTram/lasagna_public" target="_blank">LASAGNA</a>  |  <a href="https://www.globesfit.org/index.html" target="_blank">GLoBESfit</a>  |  <a href="http://gna.pages.jinr.ru/gna/index.html" target="_blank">GNA</a>
+	<a href="http://www.nu-fit.org/" target="_blank">NuFIT</a>  |  <a href="https://www.mpi-hd.mpg.de/personalhomes/globes/" target="_blank">GLoBES</a>  |  <a href="https://github.com/ThomasTram/lasagna_public" target="_blank">LASAGNA</a>  |  <a href="https://www.globesfit.org/index.html" target="_blank">GLoBESfit</a>  |  <a href="http://gna.pages.jinr.ru/gna/index.html" target="_blank">GNA</a>  |  <a href="https://github.com/bradkav/CEvNS" target="_blank">CEvNS</a>
+
+
 
 	<!--
 	<h3> Neutrino DIS experiments </h3>
@@ -80,7 +82,9 @@
  
 
 	<h3> EFT packages </h3>
-	<a href="https://wilson-eft.github.io/" target="_blank">wilson</a>  |  <a href="https://wcxf.github.io/" target="_blank">WCxf</a>  |  <a href="https://flav-io.github.io/" target="_blank">flavio</a>  |  <a href="https://smelli.github.io/" target="_blank">smelli</a>  |  <a href="https://github.com/abc-eft/abc_eft" target="_blank">abc-eft</a>  |  
+	<a href="https://wilson-eft.github.io/" target="_blank">wilson</a>  |  <a href="https://wcxf.github.io/" target="_blank">WCxf</a>  |  <a href="https://flav-io.github.io/" target="_blank">flavio</a>  |  <a href="https://smelli.github.io/" target="_blank">smelli</a>  |  <a href="https://github.com/abc-eft/abc_eft" target="_blank">abc-eft</a>  |  <a href="https://dsixtools.github.io/" target="_blank">DsixTools</a>  |  
+
+
 
 
 	<h3> Physical constants </h3>
