--- a/Publications.html
+++ b/Publications.html
@@ -35,7 +35,7 @@
     <!--     x     -->
     <ol reversed>
       <li> <u><b>Yong Du</b></u>, H.-L. Li, J. Tang, S. Vihonen, and J.-H. Yu, <a href="https://arxiv.org/abs/2011.14292" target="_blank"> <br>Non-standard interactions in SMEFT confronted with terrestrial neutrino experiments,</a> <br>arXiv:2011.14292 </li>
-      <li> <u><b>Yong Du</b></u>, F. Huang, H.-L. Li and J.-H. Yu, <a href="https://arxiv.org/abs/2005.01717" target="_blank"> <br>Freezing-in Dark Matter from Secret Neutrino Interactions,</a> <br>arXiv:2005.01717 </li>
+      <li> <u><b>Yong Du</b></u>, F. Huang, H.-L. Li and J.-H. Yu, <a href="https://link.springer.com/article/10.1007%2FJHEP12%282020%29207" target="_blank"> <br>Freezing-in Dark Matter from Secret Neutrino Interactions,</a> <br>JHEP 12 (2020) 207. </li>
       <li> C.-W. Chiang, G. Cottin, <u><b>Yong Du</b></u>, K. Fuyuto and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/2003.07867" target="_blank"><br>Collider Probes of Real Triplet Scalar Dark Matter,</a> <br>arXiv:2003.07867 </li>
       <li> <u><b>Yong Du</b></u>, A. Freitas, H.H. Patel and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/1912.08220" target="_blank"><br>Parity-Violating Møller Scattering at NNLO: Closed Fermion Loops,</a><br>arXiv:1912.08220
  </li>
