update LatestResults page

--- a/LatestResults.html
+++ b/LatestResults.html
@@ -35,6 +35,17 @@
     <h1> Latest Results </h1>
     <!--     x     -->
     <ol reversed>
+
+		<li> <b>Recent work on neutrino NSIs from Neff in an EFT framework</b>: <a href="https://arxiv.org/abs/2011.14292" target="_blank"> Non-standard interactions in SMEFT confronted with terrestrial neutrino experiments </a></li>
+		<ul>
+			<br>
+			<li><b>Key plots:</b></li><br>
+				<embed src="figs/LatestResultFig/ConstraintsNP.pdf" width="700px" height="530px">
+		</ul>
+
+		<br>
+		<br>
+
 	
 		<li> <b>Recent work on neutrino NSIs in SMEFT from terrestrial neutrino experiments</b>: <a href="https://arxiv.org/abs/2011.14292" target="_blank"> Non-standard interactions in SMEFT confronted with terrestrial neutrino experiments </a></li>
 
@@ -50,7 +61,7 @@
 			<li><b>Key plots:</b></li><br>
 				<embed src="figs/LatestResultFig/LBL-Experiments.pdf" width="700px" height="300px">
 				<embed src="figs/LatestResultFig/Reactor-Experiments.pdf" width="700px" height="300px"> <!-- embed works the best -->
-    	</ul>
+	    	</ul>
 
 
 		<br>
