--- a/Talks.html
+++ b/Talks.html
@@ -42,6 +42,9 @@
 </li>
 -->
 
+<li><b>Upcoming:</b> The XIX International Workshop on Neutrino Telescopes, 
+      <br>INFN Sezione di Padova & Physics and Astronomy Department of Padova University, (Online due to COVID-19)
+      <br>Parallel talk: Constraints on neutrino non-standard interactions: From neutrino oscillations to precision cosmology
     <li>The 6th China LHC Physics Workshop (CLHCP2020, November 2020)
       <br>Tsinghua University, Beijing, China (Online due to COVID-19)
       <br>Parallel talk: Discovery of the real and complex triplet models at the LHC and future colliders
