--- a/LatestResults.html
+++ b/LatestResults.html
@@ -36,7 +36,7 @@
     <!--     x     -->
     <ol reversed>
 
-		<li> <b>Recent work on neutrino NSIs from Neff in an EFT framework</b>: <a href="https://arxiv.org/abs/2101.10475" target="_blank"> Non-standard interactions in SMEFT confronted with terrestrial neutrino experiments </a></li>
+		<li> <b>Recent work on neutrino NSIs from Neff in an EFT framework</b>: <a href="https://arxiv.org/abs/2101.10475" target="_blank"> Neutrino non-standard interactions meet precision measurements of Neff </a></li>
 		<ul>
 			<br>
 			<li><b>Key plots:</b></li><br>
