update publications, talks

--- a/Talks.html
+++ b/Talks.html
@@ -42,7 +42,7 @@
 </li>
 -->
 
-<li><b>Upcoming:</b> The XIX International Workshop on Neutrino Telescopes, 
+    <li>The XIX International Workshop on Neutrino Telescopes, 
       <br>INFN Sezione di Padova & Physics and Astronomy Department of Padova University, (Online due to COVID-19)
       <br>Parallel talk: Constraints on neutrino non-standard interactions: From neutrino oscillations to precision cosmology
     <li>The 6th China LHC Physics Workshop (CLHCP2020, November 2020)
