--- a/Publications.html
+++ b/Publications.html
@@ -34,12 +34,14 @@
     <h1> Publications </h1> (My <a href="https://inspirehep.net/authors/1728496" target="_blank">INSPIRE</a> page)
     <!--     x     -->
     <ol reversed>
-      <li> <u><b>Yong Du</b></u>, H.-L. Li, J. Tang, S. Vihonen, and J.-H. Yu, <a href="https://arxiv.org/abs/2011.14292" target="_blank"> <br>Non-standard interactions in SMEFT confronted with terrestrial neutrino experiments,</a> <br>arXiv:2011.14292 </li>
-      <li> <u><b>Yong Du</b></u>, F. Huang, H.-L. Li and J.-H. Yu, <a href="https://link.springer.com/article/10.1007%2FJHEP12%282020%29207" target="_blank"> <br>Freezing-in Dark Matter from Secret Neutrino Interactions,</a> <br>JHEP 12 (2020) 207. </li>
-      <li> C.-W. Chiang, G. Cottin, <u><b>Yong Du</b></u>, K. Fuyuto and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/2003.07867" target="_blank"><br>Collider Probes of Real Triplet Scalar Dark Matter,</a> <br>arXiv:2003.07867 </li>
-      <li> <u><b>Yong Du</b></u>, A. Freitas, H.H. Patel and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/1912.08220" target="_blank"><br>Parity-Violating Møller Scattering at NNLO: Closed Fermion Loops,</a><br>arXiv:1912.08220
+      <li> <u><b>Yong Du</b></u>, and J.-H. Yu, <a href="https://arxiv.org/abs/2101.10475" target="_blank"> <br>Neutrino non-standard interactions meet precision measurements of Neff,</a> <br>arXiv:2101.10475 </li>
+      <li> <u><b>Yong Du</b></u>, H.-L. Li, J. Tang, S. Vihonen, and J.-H. Yu, <a href="https://arxiv.org/abs/2011.14292" target="_blank"> <br>Non-standard interactions in SMEFT confronted with terrestrial neutrino experiments,</a> <br>arXiv:2011.14292 (To appear in JHEP) </li>
+      <li> <u><b>Yong Du</b></u>, <a href="https://doi.org/10.22323/1.382.0232" target="_blank"><br>Collider Probes of Real Triplet Scalar Dark Matter,</a> <br>PoS LHCP2020 (2021) 232 • Contribution to: LHCP2020 </li>
+      <li> <u><b>Yong Du</b></u>, F. Huang, H.-L. Li and J.-H. Yu, <a href="https://doi.org/10.1007/JHEP12(2020)207" target="_blank"> <br>Freezing-in Dark Matter from Secret Neutrino Interactions,</a> <br>JHEP 12 (2020) 207. </li>
+      <li> C.-W. Chiang, G. Cottin, <u><b>Yong Du</b></u>, K. Fuyuto and M. J. Ramsey-Musolf, <a href="https://doi.org/10.1007/JHEP01(2021)198" target="_blank"><br>Collider Probes of Real Triplet Scalar Dark Matter,</a> <br>JHEP 01 (2021) 198 </li>
+      <li> <u><b>Yong Du</b></u>, A. Freitas, H.H. Patel and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/1912.08220" target="_blank"><br>Parity-Violating Møller Scattering at NNLO: Closed Fermion Loops,</a><br>arXiv:1912.08220 (To appear in PRL)
  </li>
-      <li> <u><b>Yong Du</b></u>, A. Dunbrack, M. J. Ramsey-Musolf and J.-H. Yu, <a href="https://link.springer.com/article/10.1007%2FJHEP01%282019%29101" target="_blank"><br>Type-II Seesaw Scalar Triplet Model at a 100 TeV pp Collider: Discovery and Higgs Portal Coupling Determination,</a><br>JHEP 1901 (2019) 101. </li>
+      <li> <u><b>Yong Du</b></u>, A. Dunbrack, M. J. Ramsey-Musolf and J.-H. Yu, <a href="https://doi.org/10.1007/JHEP01(2019)101" target="_blank"><br>Type-II Seesaw Scalar Triplet Model at a 100 TeV pp Collider: Discovery and Higgs Portal Coupling Determination,</a><br>JHEP 1901 (2019) 101. </li>
     </ol>
   </div>
 
