update cv and talks pages

--- a/Talks.html
+++ b/Talks.html
@@ -37,39 +37,42 @@
     <ol reversed>
 <!--
     <li><b>Upcoming:</b> The 6th China LHC Physics Workshop (CLHCP2020, November 2020)
-      <br>Tsinghua University, Beijing, China (Online due to COVID-19)
+      <br>Tsinghua University, Beijing, China (virtual)
       <br>Parallel talk: Discovery of the real and complex triplet models at the LHC and future colliders
 </li>
 -->
-
+    <li><b>Upcoming:</b> Beyond Standard Model: From Theory to Experiment (BSM-2021, November 2020)
+      <br>Zewail City of Science and Technology & Sabancı University (virtual)
+      <br>Parallel talk: Searching for new physics through neutrino non-standard interactions
+</li>
     <li>The XIX International Workshop on Neutrino Telescopes, 
-      <br>INFN Sezione di Padova & Physics and Astronomy Department of Padova University, (Online due to COVID-19)
+      <br>INFN Sezione di Padova & Physics and Astronomy Department of Padova University, (virtual)
       <br>Parallel talk: Constraints on neutrino non-standard interactions: From neutrino oscillations to precision cosmology
     <li>The 6th China LHC Physics Workshop (CLHCP2020, November 2020)
-      <br>Tsinghua University, Beijing, China (Online due to COVID-19)
+      <br>Tsinghua University, Beijing, China (virtual)
       <br>Parallel talk: Discovery of the real and complex triplet models at the LHC and future colliders
 </li>
     <li> SLAC Summer Institute 2020 (SSI 2020, August 2020)
-      <br>SLAC, CA, USA (Online due to COVID-19)
+      <br>SLAC, CA, USA (virtual)
       <br>Poster presentation: Freeze-in Dark Matter from Secret Neutrino Interactions
 </li>
 
     <li> The XXIX International Conference on Neutrino Physics and Astrophysics (Neutrino 2020,
 June-July 2020)
-      <br>Chicago, IL, USA (Online due to COVID-19)
+      <br>Chicago, IL, USA (virtual)
       <br>Poster presentation: Freeze-in Dark Matter from Secret Neutrino Interactions </li>
     <li> The Seventh Dark Matter@LHC 2020 Workshop (DM@LHC, June 2020)
-      <br>DESY, Hamburg, Germany (Online due to COVID-19)
+      <br>DESY, Hamburg, Germany (virtual)
       <br>Plenary talk: Probing the real triplet scalar dark matter at colliders </li>
     <li> The Seventh Workshop of the LHC LLP Community (LHC LLP, May 2020)
-      <br>CERN (Online due to COVID-19)
+      <br>CERN (virtual)
       <br>Plenary talk: Collider probes of real triplet scalar dark matter </li>
     <li> The Eighth Annual Large Hadron Collider Physics (LHCP2020, May 2020)
-      <br>International Conference Centre of Sorbonne Universite, Paris, France (Online due to COVID-19)
+      <br>International Conference Centre of Sorbonne Universite, Paris, France (virtual)
       <br>Theory poster presentation in the “Dark Sector BSM”: Collider probes of real triplet
 scalar dark matter </li>
     <li> Phenomenology 2020 Symposium (May 2020)
-      <br>University of Pittsburgh, PA, USA (Online due to COVID-19)
+      <br>University of Pittsburgh, PA, USA (virtual)
       <br>Parallel talk: Collider probes of real triplet scalar dark matter </li>
     <li> LoopFest XVIII (August 2019)
       <br>Fermilab, IL, USA
