update talk page

--- a/Talks.html
+++ b/Talks.html
@@ -41,6 +41,11 @@
       <br>Parallel talk: Discovery of the real and complex triplet models at the LHC and future colliders
 </li>
 -->
+
+    <li><b>Upcoming:</b> Higgs and Effective Field Theory 2021 (HEFT 2021)
+      <br>University of Science and Technology of China, Hefei, China
+      <br>Plenary talk: Exploring the ultraviolet from neutrino oscillations and $N_{\text{eff}}$ in the EFT framework
+</li>
     <li><b>Upcoming:</b> Beyond Standard Model: From Theory to Experiment (BSM-2021, November 2020)
       <br>Zewail City of Science and Technology & Sabancı University (virtual)
       <br>Parallel talk: Searching for new physics through neutrino non-standard interactions
