update CV page and publications

--- a/CV.html
+++ b/CV.html
@@ -66,6 +66,7 @@ Science, 2019-2020</li>
     <li><b>Neutrinos</b></li>
     <li><b>Collider Phenomenologies</b></li>
     <li><b>Multi-loop Electroweak Radiative Corrections</b></li>
+    <li><b>On-shell amplitudes</b></li>
     <!--     <li>Cosmology (Recently)</li> -->
     <!--     x     -->
     <h1>Selected Teaching</h1>
