--- a/Publications.html
+++ b/Publications.html
@@ -39,7 +39,7 @@
       <li> <u><b>Yong Du</b></u>, <a href="https://doi.org/10.22323/1.382.0232" target="_blank"><br>Collider Probes of Real Triplet Scalar Dark Matter,</a> <br>PoS LHCP2020 (2021) 232 • Contribution to: LHCP2020 </li>
       <li> <u><b>Yong Du</b></u>, F. Huang, H.-L. Li and J.-H. Yu, <a href="https://doi.org/10.1007/JHEP12(2020)207" target="_blank"> <br>Freezing-in Dark Matter from Secret Neutrino Interactions,</a> <br>JHEP 12 (2020) 207. </li>
       <li> C.-W. Chiang, G. Cottin, <u><b>Yong Du</b></u>, K. Fuyuto and M. J. Ramsey-Musolf, <a href="https://doi.org/10.1007/JHEP01(2021)198" target="_blank"><br>Collider Probes of Real Triplet Scalar Dark Matter,</a> <br>JHEP 01 (2021) 198 </li>
-      <li> <u><b>Yong Du</b></u>, A. Freitas, H.H. Patel and M. J. Ramsey-Musolf, <a href="https://arxiv.org/abs/1912.08220" target="_blank"><br>Parity-Violating Møller Scattering at NNLO: Closed Fermion Loops,</a><br>arXiv:1912.08220 (To appear in PRL)
+      <li> <u><b>Yong Du</b></u>, A. Freitas, H.H. Patel and M. J. Ramsey-Musolf, <a href="https://doi.org/10.1103/PhysRevLett.126.131801" target="_blank"><br>Parity-Violating Møller Scattering at NNLO: Closed Fermion Loops,</a><br>Phys.Rev.Lett. 126 (2021) 13, 131801
  </li>
       <li> <u><b>Yong Du</b></u>, A. Dunbrack, M. J. Ramsey-Musolf and J.-H. Yu, <a href="https://doi.org/10.1007/JHEP01(2019)101" target="_blank"><br>Type-II Seesaw Scalar Triplet Model at a 100 TeV pp Collider: Discovery and Higgs Portal Coupling Determination,</a><br>JHEP 1901 (2019) 101. </li>
     </ol>
