update talk page

--- a/Talks.html
+++ b/Talks.html
@@ -46,7 +46,7 @@
       <br>University of Science and Technology of China, Hefei, China
       <br>Plenary talk: Exploring the ultraviolet from neutrino oscillations and Neff in the EFT framework
 </li>
-    <li><b>Upcoming:</b> Beyond Standard Model: From Theory to Experiment (BSM-2021, November 2020)
+    <li>Beyond Standard Model: From Theory to Experiment (BSM-2021, November 2020)
       <br>Zewail City of Science and Technology & Sabancı University (virtual)
       <br>Parallel talk: Searching for new physics through neutrino non-standard interactions
 </li>
