--- a/CV.html
+++ b/CV.html
@@ -65,6 +65,7 @@ Science, 2019-2020</li>
     <li><b>Dark Matter</b></li>
     <li><b>Neutrinos</b></li>
     <li><b>Collider Phenomenologies</b></li>
+    <li><b>Effective field theories (pheno and their formalism with on-shell amplitudes etc)</b></li>
     <li><b>Multi-loop Electroweak Radiative Corrections</b></li>
     <li><b>On-shell amplitudes</b></li>
     <!--     <li>Cosmology (Recently)</li> -->
