--- a/Publications.html
+++ b/Publications.html
@@ -34,8 +34,8 @@
     <h1> Publications </h1> (My <a href="https://inspirehep.net/authors/1728496" target="_blank">INSPIRE</a> page)
     <!--     x     -->
     <ol reversed>
-      <li> <u><b>Yong Du</b></u>, and J.-H. Yu, <a href="https://arxiv.org/abs/2101.10475" target="_blank"> <br>Neutrino non-standard interactions meet precision measurements of Neff,</a> <br>arXiv:2101.10475 </li>
-      <li> <u><b>Yong Du</b></u>, H.-L. Li, J. Tang, S. Vihonen, and J.-H. Yu, <a href="https://arxiv.org/abs/2011.14292" target="_blank"> <br>Non-standard interactions in SMEFT confronted with terrestrial neutrino experiments,</a> <br>arXiv:2011.14292 (To appear in JHEP) </li>
+      <li> <u><b>Yong Du</b></u>, and J.-H. Yu, <a href="https://arxiv.org/abs/2101.10475" target="_blank"> <br>Neutrino non-standard interactions meet precision measurements of Neff,</a> <br>arXiv:2101.10475 (To appear in JHEP) </li>
+      <li> <u><b>Yong Du</b></u>, H.-L. Li, J. Tang, S. Vihonen, and J.-H. Yu, <a href="https://doi.org/10.1007/JHEP03(2021)019" target="_blank"> <br>Non-standard interactions in SMEFT confronted with terrestrial neutrino experiments,</a> <br>JHEP 03 (2021) 019 </li>
       <li> <u><b>Yong Du</b></u>, <a href="https://doi.org/10.22323/1.382.0232" target="_blank"><br>Collider Probes of Real Triplet Scalar Dark Matter,</a> <br>PoS LHCP2020 (2021) 232 • Contribution to: LHCP2020 </li>
       <li> <u><b>Yong Du</b></u>, F. Huang, H.-L. Li and J.-H. Yu, <a href="https://doi.org/10.1007/JHEP12(2020)207" target="_blank"> <br>Freezing-in Dark Matter from Secret Neutrino Interactions,</a> <br>JHEP 12 (2020) 207. </li>
       <li> C.-W. Chiang, G. Cottin, <u><b>Yong Du</b></u>, K. Fuyuto and M. J. Ramsey-Musolf, <a href="https://doi.org/10.1007/JHEP01(2021)198" target="_blank"><br>Collider Probes of Real Triplet Scalar Dark Matter,</a> <br>JHEP 01 (2021) 198 </li>
