update CV, publications, talk page

--- a/Talks.html
+++ b/Talks.html
@@ -42,7 +42,18 @@
 </li>
 -->
 
-    <li><b>Upcoming:</b> Higgs and Effective Field Theory 2021 (HEFT 2021)
+<li>2021 Meeting of the Division of Particles and Fields of the American Physical Society (DPF21)
+      <br>Florida State University, FL, USA (virtual)
+      <br>Parallel talk: Neutrino non-standard interactions revisited in effective field theories
+<li>The 28th International Workshop on Weak Interactions and Neutrinos (WIN2021)
+      <br>University of Minnesota, MN, USA (virtual)
+      <br>Poster presentation: Implications on the UV from neutrino non-standard interactions in the EFT approach
+</li>
+<li>Phenomenology 2021 Symposium (May 2021)
+      <br>University of Pittsburgh, PA, USA (virtual)
+      <br>Parallel talk: Implications on new physics from neutrino non-standard interactions in the EFT framework
+</li>
+    <li>Higgs and Effective Field Theory 2021 (HEFT 2021)
       <br>University of Science and Technology of China, Hefei, China
       <br>Plenary talk: Exploring the ultraviolet from neutrino oscillations and Neff in the EFT framework
 </li>
