--- a/Publications.html
+++ b/Publications.html
@@ -34,7 +34,9 @@
     <h1> Publications </h1> (My <a href="https://inspirehep.net/authors/1728496" target="_blank">INSPIRE</a> page)
     <!--     x     -->
     <ol reversed>
-      <li> <u><b>Yong Du</b></u>, and J.-H. Yu, <a href="https://arxiv.org/abs/2101.10475" target="_blank"> <br>Neutrino non-standard interactions meet precision measurements of Neff,</a> <br>arXiv:2101.10475 (To appear in JHEP) </li>
+      <li> <u><b>Yong Du</b></u>, H.-L. Li, J. Tang, S. Vihonen, and J.-H. Yu, <a href="https://arxiv.org/abs/2106.15800" target="_blank"> <br>Exploring SMEFT Induced Non-Standard Interactions from COHERENT to Neutrino Oscillations,</a> <br>arXiv:2106.15800 </li>
+      <li> <u><b>Yong Du</b></u>, <a href="https://arxiv.org/abs/2105.06191" target="_blank"> <br>Searching for new physics through neutrino non-standard interactions,</a> <br>arXiv:2105.06191 </li>
+      <li> <u><b>Yong Du</b></u>, and J.-H. Yu, <a href="https://doi.org/10.1007/JHEP05(2021)058" target="_blank"> <br>Neutrino non-standard interactions meet precision measurements of Neff,</a> <br>JHEP 05 (2021) 058 </li>
       <li> <u><b>Yong Du</b></u>, H.-L. Li, J. Tang, S. Vihonen, and J.-H. Yu, <a href="https://doi.org/10.1007/JHEP03(2021)019" target="_blank"> <br>Non-standard interactions in SMEFT confronted with terrestrial neutrino experiments,</a> <br>JHEP 03 (2021) 019 </li>
       <li> <u><b>Yong Du</b></u>, <a href="https://doi.org/10.22323/1.382.0232" target="_blank"><br>Collider Probes of Real Triplet Scalar Dark Matter,</a> <br>PoS LHCP2020 (2021) 232 • Contribution to: LHCP2020 </li>
       <li> <u><b>Yong Du</b></u>, F. Huang, H.-L. Li and J.-H. Yu, <a href="https://doi.org/10.1007/JHEP12(2020)207" target="_blank"> <br>Freezing-in Dark Matter from Secret Neutrino Interactions,</a> <br>JHEP 12 (2020) 207. </li>
