update publications, talks

--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -35,7 +35,9 @@
 * Not for completeness.
 	
 	<h3> Useful links </h3>
-	<a href="https://arxiv.org/" target="_blank">arXiv</a>  |  <a href="http://pdg.lbl.gov/" target="_blank">Particle Data Group</a>  |  <a href="https://inspirehep.net/" target="_blank">INSPIREHEP</a>  |  <a href="http://ckmfitter.in2p3.fr/" target="_blank">CKMfitter</a>  |  <a href="http://ckmlive.in2p3.fr/" target="_blank">CKMlive</a>  |  <a href="http://project-gfitter.web.cern.ch/project-gfitter/" target="_blank">Gfitter</a>  |  <a href="http://gfitter.desy.de/Standard_Model/" target="_blank">GfitterSM</a>  |  <a href="http://sanc.jinr.ru/users/zfitter/" target="_blank">ZFITTER</a>  |  <a href="https://hepfit.roma1.infn.it/" target="_blank">HEPfit</a>
+	<a href="https://arxiv.org/" target="_blank">arXiv</a>  |  <a href="http://pdg.lbl.gov/" target="_blank">Particle Data Group</a>  |  <a href="https://inspirehep.net/" target="_blank">INSPIREHEP</a>  |  <a href="http://ckmfitter.in2p3.fr/" target="_blank">CKMfitter</a>  |  <a href="http://ckmlive.in2p3.fr/" target="_blank">CKMlive</a>  |  <a href="http://project-gfitter.web.cern.ch/project-gfitter/" target="_blank">Gfitter</a>  |  <a href="http://gfitter.desy.de/Standard_Model/" target="_blank">GfitterSM</a>  |  <a href="http://sanc.jinr.ru/users/zfitter/" target="_blank">ZFITTER</a>  |  <a href="https://hepfit.roma1.infn.it/" target="_blank">HEPfit</a>  |  <a href="https://www.fisica.unam.mx/erler/GAPPP.html" target="_blank">GAPP</a>
+
+
 
 
 ​	
@@ -62,7 +64,7 @@
 	<a href="https://www.niu.edu/spmartin/TSIL/" target="_blank">TSIL</a>  |  <a href="https://arxiv.org/pdf/hep-ph/9907431.pdf" target="_blank">ON-SHELL2</a>  |  <a href="https://arxiv.org/pdf/hep-ph/9905560.pdf" target="_blank">DIANA</a> <!--后两者比较小众 -->
 	
 	<li>Numeric tools:</li>
-	<a href="https://collier.hepforge.org/" target="_blank">COLLIER</a>  |  <a href="https://secdec.readthedocs.io/en/stable/" target="_blank">PySecDec</a>  |  <a href="http://www.feynarts.de/looptools/" target="_blank">LoopTools</a>  |  <a href="https://gjvo.home.xs4all.nl/FF.html" target="_blank">FF</a>  |  <a href="https://packagex.hepforge.org/" target="_blank">CollierLink</a>  |  
+	<a href="https://collier.hepforge.org/" target="_blank">COLLIER</a>  |  <a href="https://secdec.readthedocs.io/en/stable/" target="_blank">PySecDec</a>  |  <a href="http://www.feynarts.de/looptools/" target="_blank">LoopTools</a>  |  <a href="https://gjvo.home.xs4all.nl/FF.html" target="_blank">FF</a>  |  <a href="https://packagex.hepforge.org/" target="_blank">CollierLink</a>  |    <a href="http://prac.us.edu.pl/~gluza/ambre/" target="_blank">AMBRE</a>  |  
 
 
 	<li>Bridges of different packages:</li>
