--- a/Talks.html
+++ b/Talks.html
@@ -32,6 +32,8 @@
  	<br>
 	<br>
 
+  <p>Last update: January 13, 2022.</p>
+
     <h1> Talks </h1>
     <!--     x     -->
     <ol reversed>
@@ -41,10 +43,26 @@
       <br>Parallel talk: Discovery of the real and complex triplet models at the LHC and future colliders
 </li>
 -->
-
+<li>PKU HEP Seminar and Workshop
+      <br>Peking University, Beijing, China
+      <br><b>Invited talk</b>: Neutrino non-standard interactions in EFTs: Low-energy experiments
+</li>
+<li>EF04 Topical Group Community Meeting
+      <br>virtual
+      <br><b>Invited talk</b>: Global fit for 4-fermion operators & operators at Z-pole
+</li>
+<li>The 2021 International Workshop on the High Energy Circular Electron Positron Collider (CEPC 2021)
+      <br>Nanjing University, Nanjing, Jiangsu, China
+      <br><b>Invited talk</b>: Global fit with operators in W/Z-pole and 4-fermion
+</li>
+<li>49th SLAC Summer Institute (SSI 2021)
+      <br>SLAC, CA, USA (virtual)
+      <br>Poster presentation: Constraining neutrino non-standard interactions from low energy neutrino experiments
+</li>
 <li>2021 Meeting of the Division of Particles and Fields of the American Physical Society (DPF21)
       <br>Florida State University, FL, USA (virtual)
       <br>Parallel talk: Neutrino non-standard interactions revisited in effective field theories
+</li>
 <li>The 28th International Workshop on Weak Interactions and Neutrinos (WIN2021)
       <br>University of Minnesota, MN, USA (virtual)
       <br>Poster presentation: Implications on the UV from neutrino non-standard interactions in the EFT approach
