--- a/Publications.html
+++ b/Publications.html
@@ -31,9 +31,14 @@
  	<br>
 	<br>
 
+  <p>Last update: Jan 13, 2022.</p>
+
     <h1> Publications </h1> (My <a href="https://inspirehep.net/authors/1728496" target="_blank">INSPIRE</a> page)
+
     <!--     x     -->
     <ol reversed>
+      <li> <u><b>Yong Du</b></u>, F. Huang, H.-L. Li, Y.-Z. Li, and J.-H. Yu, <a href="https://arxiv.org/abs/2111.01267" target="_blank"> <br>Revisit Dark Matter Freeze-in and Freeze-out through Phase-Space Distribution,</a> <br>arXiv:2111.01267 </li>
+      <li> <u>L.A. Anchordoqui et al,</u> <a href="https://arxiv.org/abs/2109.10905" target="_blank"> <br>The Forward Physics Facility: Sites, Experiments, and Physics Potential,</a> <br>arXiv:2109.10905 </li>
       <li> <u><b>Yong Du</b></u>, H.-L. Li, J. Tang, S. Vihonen, and J.-H. Yu, <a href="https://arxiv.org/abs/2106.15800" target="_blank"> <br>Exploring SMEFT Induced Non-Standard Interactions from COHERENT to Neutrino Oscillations,</a> <br>arXiv:2106.15800 </li>
       <li> <u><b>Yong Du</b></u>, <a href="https://arxiv.org/abs/2105.06191" target="_blank"> <br>Searching for new physics through neutrino non-standard interactions,</a> <br>arXiv:2105.06191 </li>
       <li> <u><b>Yong Du</b></u>, and J.-H. Yu, <a href="https://doi.org/10.1007/JHEP05(2021)058" target="_blank"> <br>Neutrino non-standard interactions meet precision measurements of Neff,</a> <br>JHEP 05 (2021) 058 </li>
