--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -32,12 +32,12 @@
  	<br>
 
 
-* Not for completeness.
+* Not for completeness. 
+<br>
+* Packages are listed without any biased preference.
 	
 	<h3> Useful links </h3>
 	<a href="https://arxiv.org/" target="_blank">arXiv</a>  |  <a href="http://pdg.lbl.gov/" target="_blank">Particle Data Group</a>  |  <a href="https://inspirehep.net/" target="_blank">INSPIREHEP</a>  |  <a href="http://ckmfitter.in2p3.fr/" target="_blank">CKMfitter</a>  |  <a href="http://ckmlive.in2p3.fr/" target="_blank">CKMlive</a>  |  <a href="http://project-gfitter.web.cern.ch/project-gfitter/" target="_blank">Gfitter</a>  |  <a href="http://gfitter.desy.de/Standard_Model/" target="_blank">GfitterSM</a>  |  <a href="http://sanc.jinr.ru/users/zfitter/" target="_blank">ZFITTER</a>  |  <a href="https://hepfit.roma1.infn.it/" target="_blank">HEPfit</a>  |  <a href="https://www.fisica.unam.mx/erler/GAPPP.html" target="_blank">GAPP</a>
-
-
 
 
 ​	
@@ -56,7 +56,10 @@
 	<a href="http://www.inp.nsk.su/~lee/programs/LiteRed/" target="_blank">LiteRed</a>  |  <a href="https://reduze.hepforge.org/" target="_blank">Reduze</a>  |  <a href="https://bitbucket.org/feynmanIntegrals/fire/src/master/" target="_blank">FIRE</a>  |  <a href="https://arxiv.org/pdf/hep-ph/0404258.pdf" target="_blank">AIR</a>  |  <a href="https://library.wolfram.com/infocenter/MathSource/606/" target="_blank">TARCER</a>
 	
 	<li>Symbolic one-loop/Amp tools</li>
-	<a href="https://packagex.hepforge.org/" target="_blank">Package-X</a>  |  <a href="https://feyncalc.github.io/" target="_blank">FeynCalc</a>  |  <a href="http://www.feynarts.de/" target="_blank">FeynArts</a>  |  <a href="https://reduce-algebra.sourceforge.io/" target="_blank">REDUCE</a>  |  <a href="https://qcdloop.fnal.gov/" target="_blank">QCDloop</a>  |  <a href="https://doi.org/10.1134/S154747711704015X" target="_blank">UVPartT<!--UV divergent part of one-loop integral with "arbitrary" external legs and tensor rank. Merged in FeynCalc9.3 --></a>  |
+	<a href="https://packagex.hepforge.org/" target="_blank">Package-X</a>  |  <a href="https://feyncalc.github.io/" target="_blank">FeynCalc</a>  |  <a href="http://www.feynarts.de/" target="_blank">FeynArts</a>  |  <a href="https://reduce-algebra.sourceforge.io/" target="_blank">REDUCE</a>  |  <a href="https://qcdloop.fnal.gov/" target="_blank">QCDloop</a>  |  <a href="https://doi.org/10.1134/S154747711704015X" target="_blank">UVPartT<!--UV divergent part of one-loop integral with "arbitrary" external legs and tensor rank. Merged in FeynCalc9.3 --></a>  |  <a href="https://magv.github.io/alibrary/" target="_blank">alibrary</a>  |  <a href="http://cfif.ist.utl.pt/~paulo/qgraf.html" target="_blank">qgraf</a>  |  <a href="https://gitlab.com/F.Herren/tapir" target="_blank">tapir</a>  |  
+
+
+
 
 
 
@@ -88,7 +91,7 @@
 
 
 	<h3> EFT packages </h3>
-	<a href="https://wilson-eft.github.io/" target="_blank">wilson</a>  |  <a href="https://wcxf.github.io/" target="_blank">WCxf</a>  |  <a href="https://flav-io.github.io/" target="_blank">flavio</a>  |  <a href="https://smelli.github.io/" target="_blank">smelli</a>  |  <a href="https://github.com/abc-eft/abc_eft" target="_blank">abc-eft</a>  |  <a href="https://dsixtools.github.io/" target="_blank">DsixTools</a>  |  
+	<a href="https://wilson-eft.github.io/" target="_blank">wilson</a>  |  <a href="https://wcxf.github.io/" target="_blank">WCxf</a>  |  <a href="https://flav-io.github.io/" target="_blank">flavio</a>  |  <a href="https://smelli.github.io/" target="_blank">smelli</a>  |  <a href="https://github.com/abc-eft/abc_eft" target="_blank">abc-eft</a>  |  <a href="https://dsixtools.github.io/" target="_blank">DsixTools</a>  |  <a href="https://ftae.ugr.es/matchmakereft/" target="_blank">matchmakereft</a>  |  <a href="https://gitlab.com/supertracer/supertracer" target="_blank">supertracer</a>  |  <a href="https://github.com/EFTMatching/STrEAM" target="_blank">STrEAM</a>  |    
 
 
 
