update the misc page

--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -58,16 +58,13 @@
 	<li>Symbolic one-loop/Amp tools</li>
 	<a href="https://packagex.hepforge.org/" target="_blank">Package-X</a>  |  <a href="https://feyncalc.github.io/" target="_blank">FeynCalc</a>  |  <a href="http://www.feynarts.de/" target="_blank">FeynArts</a>  |  <a href="https://reduce-algebra.sourceforge.io/" target="_blank">REDUCE</a>  |  <a href="https://qcdloop.fnal.gov/" target="_blank">QCDloop</a>  |  <a href="https://doi.org/10.1134/S154747711704015X" target="_blank">UVPartT<!--UV divergent part of one-loop integral with "arbitrary" external legs and tensor rank. Merged in FeynCalc9.3 --></a>  |  <a href="https://magv.github.io/alibrary/" target="_blank">alibrary</a>  |  <a href="http://cfif.ist.utl.pt/~paulo/qgraf.html" target="_blank">qgraf</a>  |  <a href="https://gitlab.com/F.Herren/tapir" target="_blank">tapir</a>  |  
 
-
-
-
-
-
 	<li>Two-loop tools:</li>
 	<a href="https://www.niu.edu/spmartin/TSIL/" target="_blank">TSIL</a>  |  <a href="https://arxiv.org/pdf/hep-ph/9907431.pdf" target="_blank">ON-SHELL2</a>  |  <a href="https://arxiv.org/pdf/hep-ph/9905560.pdf" target="_blank">DIANA</a> <!--后两者比较小众 -->
 	
 	<li>Numeric tools:</li>
-	<a href="https://collier.hepforge.org/" target="_blank">COLLIER</a>  |  <a href="https://secdec.readthedocs.io/en/stable/" target="_blank">PySecDec</a>  |  <a href="http://www.feynarts.de/looptools/" target="_blank">LoopTools</a>  |  <a href="https://gjvo.home.xs4all.nl/FF.html" target="_blank">FF</a>  |  <a href="https://packagex.hepforge.org/" target="_blank">CollierLink</a>  |    <a href="http://prac.us.edu.pl/~gluza/ambre/" target="_blank">AMBRE</a>  |  
+	<a href="https://collier.hepforge.org/" target="_blank">COLLIER</a>  |  <a href="https://secdec.readthedocs.io/en/stable/" target="_blank">PySecDec</a>  |  <a href="http://www.feynarts.de/looptools/" target="_blank">LoopTools</a>  |  <a href="https://gjvo.home.xs4all.nl/FF.html" target="_blank">FF</a>  |  <a href="https://packagex.hepforge.org/" target="_blank">CollierLink</a>  |    <a href="http://prac.us.edu.pl/~gluza/ambre/" target="_blank">AMBRE</a>  |    <a href="https://mbtools.hepforge.org/" target="_blank">Mellin-Barnes tools</a>    
+
+
 
 
 	<li>Bridges of different packages:</li>
