update cv, publications, talks

--- a/CV.html
+++ b/CV.html
@@ -35,7 +35,7 @@
 
  	<br>
 
-  <p>*A PDF version of my CV is <a href="files/CV-YongDu.pdf" target="_blank">here</a> (last update: January 14, 2022).</p>
+  <p>*A PDF version of my CV is <a href="files/CV-YongDu.pdf" target="_blank">here</a> (last update: July 27, 2022).</p>
 
   
   <div>
@@ -80,8 +80,8 @@ Science, 2019-2020</li>
     <p>Mathematica, Python, REDUCE, LanHEP, CalcHEP, FeynRules, MicrOMEGAs, MadGraph, Delphes, Pythia, ROOT, C++, C, bash,  FeynArts, Package-X, FIRE, COLLIER, FeynCalc, LoopTools ...</p>
     <!--     x     -->
     <h1>Languages</h1>
-    <li>English (fluent – <font color="red"><i>five years’</i></font> teaching assistance experience at the University of Massachusetts-Amherst.)</li>
-    <li>Mandarin (native.)</li>
+    <li>English (Full professional proficiency.)</li>
+    <li>Mandarin (Native proficiency.)</li>
 
   </div>
 
