--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -37,7 +37,8 @@
 * Packages are listed without any biased preference.
 	
 	<h3> Useful links </h3>
-	<a href="https://arxiv.org/" target="_blank">arXiv</a>  |  <a href="http://pdg.lbl.gov/" target="_blank">Particle Data Group</a>  |  <a href="https://inspirehep.net/" target="_blank">INSPIREHEP</a>  |  <a href="http://ckmfitter.in2p3.fr/" target="_blank">CKMfitter</a>  |  <a href="http://ckmlive.in2p3.fr/" target="_blank">CKMlive</a>  |  <a href="http://project-gfitter.web.cern.ch/project-gfitter/" target="_blank">Gfitter</a>  |  <a href="http://gfitter.desy.de/Standard_Model/" target="_blank">GfitterSM</a>  |  <a href="http://sanc.jinr.ru/users/zfitter/" target="_blank">ZFITTER</a>  |  <a href="https://hepfit.roma1.infn.it/" target="_blank">HEPfit</a>  |  <a href="https://www.fisica.unam.mx/erler/GAPPP.html" target="_blank">GAPP</a>
+	<a href="https://arxiv.org/" target="_blank">arXiv</a>  |  <a href="http://pdg.lbl.gov/" target="_blank">Particle Data Group</a>  |  <a href="https://inspirehep.net/" target="_blank">INSPIREHEP</a>  |  <a href="http://ckmfitter.in2p3.fr/" target="_blank">CKMfitter</a>  |  <a href="http://ckmlive.in2p3.fr/" target="_blank">CKMlive</a>  |  <a href="http://project-gfitter.web.cern.ch/project-gfitter/" target="_blank">Gfitter</a>  |  <a href="http://gfitter.desy.de/Standard_Model/" target="_blank">GfitterSM</a>  |  <a href="http://sanc.jinr.ru/users/zfitter/" target="_blank">ZFITTER</a>  |  <a href="https://hepfit.roma1.infn.it/" target="_blank">HEPfit</a>  |  <a href="https://www.fisica.unam.mx/erler/GAPPP.html" target="_blank">GAPP</a>  |  <a href="https://twiki.cern.ch/twiki/bin/view/AtlasPublic/CONFnotes" target="_blank">ATLAS conf notes</a>
+
 
 
 ​	
@@ -91,10 +92,25 @@
 	<a href="https://wilson-eft.github.io/" target="_blank">wilson</a>  |  <a href="https://wcxf.github.io/" target="_blank">WCxf</a>  |  <a href="https://flav-io.github.io/" target="_blank">flavio</a>  |  <a href="https://smelli.github.io/" target="_blank">smelli</a>  |  <a href="https://github.com/abc-eft/abc_eft" target="_blank">abc-eft</a>  |  <a href="https://dsixtools.github.io/" target="_blank">DsixTools</a>  |  <a href="https://ftae.ugr.es/matchmakereft/" target="_blank">matchmakereft</a>  |  <a href="https://gitlab.com/supertracer/supertracer" target="_blank">supertracer</a>  |  <a href="https://github.com/EFTMatching/STrEAM" target="_blank">STrEAM</a>  |    
 
 
+	<h3> Parton Distribution Functions (in superseded order) </h3>
+	<a href="https://mstwpdf.hepforge.org/" target="_blank">MSTW</a>  |  <a href="https://www.hep.ucl.ac.uk/mmht/index.shtml" target="_blank">MMHT</a>  |  <a href="https://www.hep.ucl.ac.uk/msht/index.shtml" target="_blank">MSHT</a>  |  <a href="http://nnpdf.mi.infn.it/nnpdf3-1/" target="_blank">NNPDF31</a>  |  
+
+
+
+
+
+
+	<h3> Phase transition packages </h3>
+	<a href="https://clwainwright.net/CosmoTransitions/" target="_blank">CosmoTransitions</a>  |  <a href="https://github.com/phbasler/BSMPT" target="_blank">BSMPT</a>  |  <a href="https://github.com/PhaseTracer/PhaseTracer" target="_blank">PhaseTracer</a>  |  <a href="https://github.com/bubbleprofiler/bubbleprofiler/" target="_blank">BubbleProfiler</a>  |  
+
+
 
 
 	<h3> Physical constants </h3>
 	<a href="https://pdg.lbl.gov/2020/reviews/rpp2020-rev-phys-constants.pdf" target="_blank">Physical constants from PDG 2020</a>
+
+	<h3> Packages written with Mathematica </h3>
+	<a href="http://packagedata.net/" target="_blank">MMA Package arxiv</a>
 
 
 
