--- a/Talks.html
+++ b/Talks.html
@@ -32,7 +32,7 @@
  	<br>
 	<br>
 
-  <p>Last update: January 13, 2022.</p>
+  <p>Last update: July 27, 2022.</p>
 
     <h1> Talks </h1>
     <!--     x     -->
@@ -43,6 +43,26 @@
       <br>Parallel talk: Discovery of the real and complex triplet models at the LHC and future colliders
 </li>
 -->
+<li>Higgs Potential 2022
+  <br>Peking University, Beijing, China
+  <br><b>Plenary talk</b>: Gravitational wave searches of the type-II seesaw model
+</li>
+<li>Seattle Snowmass Summer Meeting 2022
+  <br>University of Washington, WA, USA
+  <br><b>Invited parallel talk</b>: SMEFT fit for 4-fermion and CP-violating interactions
+</li>
+<li>Energy Frontier Workshop
+  <br>Brown University, RI, USA
+  <br><b>Invited summary talk as an early career representative</b>: EF04 proposal for summary plots/tables
+</li>
+<li>Energy Frontier Workshop
+  <br>Brown University, RI, USA
+  <br><b>Invited talk</b>: SMEFT fits for CP-violating and four-fermion processes
+</li>
+<li>4th Forward Physics Facility Meeting
+  <br>virtual
+  <br><b>Parallel talk</b>: 4-fermion operators and their UV completion at FASERv
+</li>
 <li>PKU HEP Seminar and Workshop
       <br>Peking University, Beijing, China
       <br><b>Invited talk</b>: Neutrino non-standard interactions in EFTs: Low-energy experiments
@@ -52,7 +72,7 @@
       <br><b>Invited talk</b>: Global fit for 4-fermion operators & operators at Z-pole
 </li>
 <li>The 2021 International Workshop on the High Energy Circular Electron Positron Collider (CEPC 2021)
-      <br>Nanjing University, Nanjing, Jiangsu, China
+      <br>Nanjing University, Jiangsu, China
       <br><b>Invited talk</b>: Global fit with operators in W/Z-pole and 4-fermion
 </li>
 <li>49th SLAC Summer Institute (SSI 2021)
