--- a/Talks.html
+++ b/Talks.html
@@ -32,7 +32,7 @@
  	<br>
 	<br>
 
-  <p>Last update: July 27, 2022.</p>
+  <p>Last update: Oct. 28, 2022.</p>
 
     <h1> Talks </h1>
     <!--     x     -->
@@ -43,13 +43,34 @@
       <br>Parallel talk: Discovery of the real and complex triplet models at the LHC and future colliders
 </li>
 -->
+<li>The 2022 International Workshop on the High Energy Circular Electron Positron Collider
+  <br>Nanjing University & IHEP CAS
+  <br><b>Invited talk</b>: Snowmass SMEFT global fit for top physics
+</li>
+
+<li>The 2022 International Workshop on the High Energy Circular Electron Positron Collider
+  <br>Nanjing University & IHEP CAS
+  <br><b>Invited talk</b>: SMEFT global fit for 4-fermion and CPV operators at future colliders
+</li>
+
+<li>SMOOTH seminar
+  <br>Zhongshan University
+  <br><b>Invited talk</b>: Global fit of SMEFT 4-fermion and CPV operators at future e<sup>+</sup>e<sup>-</sup> colliders
+</li>
+
+<li>ILD Analysis/Software Meeting
+  <br>virtual
+  <br><b>Invited talk</b>: Determine CP-violating e ects in pure bosonic contact interactions at future e<sup>+</sup>e<sup>-</sup> colliders
+</li>
+
 <li>Higgs Potential 2022
   <br>Peking University, Beijing, China
-  <br><b>Plenary talk</b>: Gravitational wave searches of the type-II seesaw model
+  <br>Plenary talk: Gravitational wave searches of the type-II seesaw model
 </li>
+
 <li>Seattle Snowmass Summer Meeting 2022
   <br>University of Washington, WA, USA
-  <br><b>Invited parallel talk</b>: SMEFT fit for 4-fermion and CP-violating interactions
+  <br><b>Invited talk</b>: SMEFT fit for 4-fermion and CP-violating interactions
 </li>
 <li>Energy Frontier Workshop
   <br>Brown University, RI, USA
@@ -61,7 +82,7 @@
 </li>
 <li>4th Forward Physics Facility Meeting
   <br>virtual
-  <br><b>Parallel talk</b>: 4-fermion operators and their UV completion at FASERv
+  <br>Parallel talk: 4-fermion operators and their UV completion at FASERv
 </li>
 <li>PKU HEP Seminar and Workshop
       <br>Peking University, Beijing, China
