update email address

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<br>
 	<img src="figs/me2.JPG" class="center" alt=""> <!-- image element is case sensitive -->
 	<p>
-		<center>Email: <a href="mailto:yongdu@itp.ac.cn">yongdu@itp.ac.cn</a> and <a href="https://inspirehep.net/authors/1728496" target="_blank">INSPIRE</a> author page</center>
+		<center>Email: <a href="mailto:yongdu@itp.ac.cn">0yongdu@gmail.com</a> and <a href="https://inspirehep.net/authors/1728496" target="_blank">INSPIRE</a> author page</center>
 	</p>
 
 	<p>
