--- a/CV.html
+++ b/CV.html
@@ -42,7 +42,7 @@
     <h1>Contact Information</h1>
     <!--     x     -->
     <li>Phone:+86-156-0076-3954</li>
-    <li>Email: <a href="mailto:yongdu@itp.ac.cn">yongdu@itp.ac.cn</a></li>
+    <li>Email: <a href="mailto:0yongdu@gmail.com">0yongdu@gmail.com</a></li>
     <li>Address: Institute of Theoretical Physics, Chinese Academy of Science, Beijing 100190, China </li>
 
     <!--     x     -->
