--- a/CV-backup.html
+++ b/CV-backup.html
@@ -35,14 +35,14 @@
 
  	<br>
 
-  <!-- <p>*A PDF version of my CV is <a href="files/CV-YongDu.pdf" target="_blank">here</a> (last update: July 27, 2022).</p> -->
+  <p>*A PDF version of my CV is <a href="files/CV-YongDu.pdf" target="_blank">here</a> (last update: July 27, 2022).</p>
 
   
   <div>
     <h1>Contact Information</h1>
     <!--     x     -->
-    <!-- <li>Phone:+86-156-0076-3954</li> -->
-    <li>Email: 0yongdu AT gmail.com </li>
+    <li>Phone:+86-156-0076-3954</li>
+    <li>Email: <a href="mailto:0yongdu@gmail.com">0yongdu@gmail.com</a></li>
     <li>Address: Institute of Theoretical Physics, Chinese Academy of Science, Beijing 100190, China </li>
 
     <!--     x     -->
@@ -53,11 +53,11 @@ Science, 2020-</li>
     <!--     x     -->
     <h1>Education</h1>
     <li>PhD Physics, University of Massachusetts-Amherst, 2015-2020</li>
-    <!-- <li>Visitor, CAS Key Laboratory of Theoretical Physics, Institute of Theoretical Physics, Chinese Academy of
-Science, 2019-2020</li> -->
-    <!-- <li>Visitor, University of Pittsburgh, 2018-2018</li> -->
+    <li>Visitor, CAS Key Laboratory of Theoretical Physics, Institute of Theoretical Physics, Chinese Academy of
+Science, 2019-2020</li>
+    <li>Visitor, University of Pittsburgh, 2018-2018</li>
     <li>Nanjing University (Transferred to University of Massachusetts-Amherst in 2015 fall), 2012-2015</li>
-    <!-- <li>Visitor, University of Massachusetts-Amherst, 2014-2014</li> -->
+    <li>Visitor, University of Massachusetts-Amherst, 2014-2014</li>
     <li>BS Physics, Zhengzhou University, 2008-2012</li>
 
     <!--     x     -->
