--- a/index.html
+++ b/index.html
@@ -5,59 +5,27 @@
   Yong Du (杜勇)
 </title>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="icon" href="icon/favicon.png">
+
 </head>
 <body>
-  
-  <navbar>
-      <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a class="#main" href="CV.html">CV</a></li>
-        <li><a class="#main" href="Publications.html">Publications</a></li>
-        <li><a class="#main" href="LatestResults.html">Latest Results</a></li>
-        <li><a class="#main" href="Talks.html">Talks</a></li>
-        <li><a class="#main" href="Miscellaneous.html">Miscellaneous</a></li>
-        <li style="float:right"><a class="#main" href="index.html"> Yong Du</a></li>
-        <!-- <input type="text" placeholder="Search.." placeholder="Search.."> -->
-        <!-- <input type="submit" value="search" placeholder="Search.."> -->
-      </ul>
-  </navbar>
-
-  <button onclick="topFunction()" id="topbutton" title="Go to top">Back to top</button>
   
   <div >
   
  	<br>
 	<br>
 	<br>
-	<br>
-	<img src="figs/me2.JPG" class="center" alt=""> <!-- image element is case sensitive -->
-	<p>
-		<center>Email: 0yongdu AT gmail.com and <a href="https://inspirehep.net/authors/1728496" target="_blank">INSPIRE</a> author page</center>
-	</p>
+  <br>
 
-	<p>
-       I received my PhD degree in September 2020 at the University of Massachusetts-Amherst. My thesis advisor
-       is <a href="http://people.umass.edu/mjrm/" target="_blank">Michael J. Ramsey-Musolf</a> and my academic advisor is
-       <a href="https://www.physics.umass.edu/people/jennie-traschen"
-       target="_blank">Jennie Traschen</a>.
- 	</p>
-
-	<p>
-	I am currently a postdoc at the Institute of Theoretical Physics, Chinese Academy of Science <a href="http://www.itp.cas.cn/" target="_blank">[中文|</a><a href="http://english.itp.cas.cn/" target="_blank">English]</a>.
-	</p>
-
+  <p>
+    Temporarily offline...
+  </p>
+  
  	<br>
 	<br>
 	<br>
 	<br>
     
     </div>
-  
-    <!-- back to top button -->
-    <script src="js/main.js"></script>
-
 
 </body>
 </html>
